--- a/_static/templates/Delegation_Results.html
+++ b/_static/templates/Delegation_Results.html
@@ -24,6 +24,10 @@
         <td> Payoff for round {{second_payment_round}} </td>
         <td> <b> {{player.earnings_period_two}}</b> </td>
     </tr>
+    <tr>
+        <td> Initial endowment </td>
+        <td> <b> {{C.ENDOWMENT}}</b> </td>
+    </tr>
     <tr style="border-bottom:2pt solid black;">
         <td> Delegation Costs </td>
         {% if player.delegation_decision == 1 %}
