--- a/_static/templates/DelegationInstructions.html
+++ b/_static/templates/DelegationInstructions.html
@@ -17,7 +17,7 @@ As usual, your screen will display information you will need if you decide to ma
 
 <br><br>
 
-<b>Their final payments</b>, like yours, come from a single randomly chosen round. Please note that it is often from a different round than that for which you delegate.
+<b>Their final payments</b>, like yours, come from the last round and one of the other four rounds in a single randomly chosen block. Please note that it is often from a different block (and round) than that for which you delegate.
 
 <br>
 <br>
