--- a/_static/templates/ComplexDelegationDecision_no_info.html
+++ b/_static/templates/ComplexDelegationDecision_no_info.html
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <td style="width:10%">
-            <input id="NoDelegation" type="radio" name="simple_delegation" value="-1" required>
+            <input id="NoDelegation" type="radio" name="complex_delegation" value="-1" required>
         </td>
         <td>
         I do not want to delegate my decision
@@ -40,13 +40,12 @@
         <td> <b> Investor </b> </td>
         <td> <b> Quality Rating </b> </td>
         <td> <b> Risk Rating </b> </td>
-        <td> <b> Earnings </b> </td>
     </tr>
     {% for e in experts %}
     <tr>
 
         <td> 
-            <input id="1" type="radio" name="simple_delegation" value="{{e.3}}" required>
+            <input id="1" type="radio" name="complex_delegation" value="{{e.3}}" required>
         </td>
        <td>
             {{e.4}}
@@ -71,9 +70,6 @@
             {% if e.1 == 3 %}
             <i> High </i>
             {% endif %}
-        </td>
-         <td>
-            <i> £{{e.0}} </i>
         </td>
     </tr>
     {% endfor %}
