--- a/_static/templates/DelegationInstructions.html
+++ b/_static/templates/DelegationInstructions.html
@@ -9,7 +9,7 @@ Instructions: Delegation
 <div class="card bg-light">
     <div class="card-body">
 
-You now choose to either delegate the task to a previous investor or else you can continue making your own choices as in the previous four rounds. If you delegate to a previous investor, then the computer will automatically choose for you exactly the same asset as that investor chose in that round.
+You can now choose to either delegate the task to a previous investor or else you can continue making your own choices as in the previous four rounds. If you delegate to a previous investor, then the computer will automatically choose for you exactly the same asset as that investor chose in that round.
 
 <br><br>
 
