--- a/_static/templates/Simple_DelegationWTP.html
+++ b/_static/templates/Simple_DelegationWTP.html
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <td style="width:10%">
-            <input id="NoDelegation" type="radio" name="trivial_wtp" value="-1" required>
+            <input type="radio" name="simple_wtp" value="-1" required>
         </td>
         <td>
         I <b>do not want to delegate</b> my decision
@@ -25,7 +25,7 @@
     {% for c in costs %}
     <tr>
         <td> 
-            <input id="1" type="radio" name="trivial_wtp" value="{{c}}" required>
+            <input type="radio" name="simple_wtp" value="{{c}}" required>
         </td>
         <td> {{c}} tokens </td>
        <td>
