--- a/_static/templates/WTP_SimpleDelegationDecision_no_payment.html
+++ b/_static/templates/WTP_SimpleDelegationDecision_no_payment.html
@@ -8,27 +8,45 @@
 <font size="4">
 <br>
 
- <b> Please take the delegation decision: </b>
+<b> To delegate, please select one of the investors below: </b>
+
 <table class="table">
     <tr>
-        <td style="width:10%">
-            <input id="NoDelegation" type="radio" name="trivial_wtp" value="-1" required>
+        <td style="width:10%"> </td>
+        <td> <b> Investor </b> </td>
+        <td> <b> Quality Rating </b> </td>
+        <td> <b> Risk Rating </b> </td>
+    </tr>
+    {% for e in experts %}
+    <tr>
+
+        <td> 
+            <input id="1" type="radio" name="simple_delegation" value="{{e.3}}" required>
+        </td>
+       <td>
+            {{e.4}}
         </td>
         <td>
-        I <b>do not want to delegate</b> my decision
+            {% if e.2 == 1 %}
+            <i> High </i>
+            {% endif %}
+            {% if e.2 == 0 %}
+            <i> Low </i>
+            {% endif %}
         </td>
-    </tr>
-    <tr>
-        <td></td>
-        <td>I <b>do want to delegate</b> my decision if the cost of delegation does no exceed: </td>
-    </tr>
-    {% for c in costs %}
-    <tr>
-        <td> 
-            <input id="1" type="radio" name="trivial_wtp" value="{{c}}" required>
+        <td>
+            {% if e.1 == 1 %}
+            <i> Low </i>
+            {% endif %}
+
+            {% if e.1 == 2 %}
+            <i> Medium </i>
+            {% endif %}
+
+            {% if e.1 == 3 %}
+            <i> High </i>
+            {% endif %}
         </td>
-        <td> {{c}} tokens </td>
-       <td>
     </tr>
     {% endfor %}
 
