--- a/_static/templates/WTP_DelegationInstructions_no_payment.html
+++ b/_static/templates/WTP_DelegationInstructions_no_payment.html
@@ -9,16 +9,17 @@ Instructions: Delegation
 <div class="card bg-light">
     <div class="card-body">
 
-You can now choose to either delegate the task to a previous investor or else you can continue making your own choices as in the previous four rounds. If you delegate to a previous investor, then the computer will automatically choose for you exactly the same asset as that investor chose in that round.
+You can now choose to either delegate the task to a previous investor or else you can continue making your own choices as in the previous four rounds. 
+If you delegate to a previous investor, then the computer will automatically choose for you exactly the same asset as that investor chose in that round.
 
 <br><br>
 
-If you choose not to delegate, then you would immediately proceed to the next round.
-If you decide to delegate you need to determine the maximal price you are willing to pay for delegation.
-The prices presented vary from 0 to 20 tokens.
-Once you made a choice computer would randomly draw a number between 0 and 20.
-If the price is below your specified maximal willingness to pay, then you would proceed to delegation screen.
-Otherwise you would proceed to the last decision round. 
+If you choose not to delegate, then you will immediately proceed to the next round. 
+If you decide to delegate you need to determine the maximal price you are willing to pay for delegation. 
+The prices presented vary from 0 to 20 tokens. 
+Once you made a choice the computer will randomly draw a number between 0 and 20. 
+If the price is below your specified maximal willingness to pay, then you will proceed to the delegation screen. 
+Otherwise you will proceed to the last decision round.
 
 <br><br>
 
@@ -27,7 +28,7 @@ Otherwise you would proceed to the last decision round.
 
 <br><br>
 
-As usual, your screen will display information you will need if you decide to make your own choices. It will also display a list of five investors who have previously played this game. The display also tells you something about each of those previous investors: their risk ratings and their quality ratings.
+If you are to proceed to delegation screen, your screen will display information you will need if you decide to make your own choices. It will also display a list of five investors who have previously played this game. The display also tells you something about each of those previous investors: their risk ratings and their quality ratings.
 
 <br><br>
 
