--- a/_static/templates/Simple_DelegationWTP.html
+++ b/_static/templates/Simple_DelegationWTP.html
@@ -84,12 +84,7 @@ If you delegate to a previous investor, then the computer will automatically cho
 
 <br><br>
 
-If you choose not to delegate, then you will immediately proceed to the next round. 
-If you decide to delegate you need to determine the maximal price you are willing to pay for delegation. 
-The prices presented vary from 0 to 20 tokens. 
-Once you made a choice the computer will randomly draw a number between 0 and 20. 
-If the price is below your specified maximal willingness to pay, then you will proceed to the delegation screen. 
-Otherwise you will proceed to the last decision round.
+If you choose not to delegate, then you will immediately proceed to the next round. If you want to delegate, you must specify the maximum price you are willing to pay for delegation. The computer has randomly drawn a price between 0 and 20. If that price turns out to be below your specified maximum willingness to pay, then you will pay that price and proceed to the delegation screen and pick the investor whose decision you will follow. Otherwise you will proceed to the screen where you make your own choice among the available options.
 
 <br><br>
 
