--- a/_static/templates/WTP_TrivialDelegationDecision_no_payment.html
+++ b/_static/templates/WTP_TrivialDelegationDecision_no_payment.html
@@ -111,7 +111,7 @@ If you choose not to delegate, then you will immediately proceed to the next rou
 
 <br><br>
 
-If you are to proceed to delegation screen, your screen will display information you will need if you decide to make your own choices. It will also display a list of five investors who have previously played this game. The display also tells you something about each of those previous investors: their risk ratings and their quality ratings.
+If you are to proceed to the delegation screen, your screen will display a list of five investors who have previously played this game. The display also tells you something about each of those previous investors: their risk ratings and their quality ratings.
 
 <br><br>
 
