--- a/_static/templates/WTP_SimpleDelegationDecision_no_payment.html
+++ b/_static/templates/WTP_SimpleDelegationDecision_no_payment.html
@@ -6,8 +6,10 @@
 
 {{ block content }}
 <font size="4">
-<br>
-
+<div style="float: center; text-align: center;">
+<b> Your willingness to pay was  above the randomly drawn price.</b>
+</div>
+<br><br>
 <b> To delegate, please select one of the investors below: </b>
 
 <table class="table">
