--- a/_static/templates/WTP_SimpleDelegationDecision_no_payment.html
+++ b/_static/templates/WTP_SimpleDelegationDecision_no_payment.html
@@ -7,7 +7,9 @@
 {{ block content }}
 <font size="4">
 <div style="float: center; text-align: center;">
-<b> Your willingness to pay was  above the randomly drawn price.</b>
+<b> 
+    The cost of delegation this round is {{ player.simple_price }} tokens, which is below your maximum of {{ player.simple_wtp }} tokens.
+</b>
 </div>
 <br><br>
 <b> To delegate, please select one of the investors below: </b>
@@ -113,7 +115,8 @@ If you choose not to delegate, then you will immediately proceed to the next rou
 
 <br><br>
 
-If you are to proceed to the delegation screen, your screen will display a list of five investors who have previously played this game and you may choose to which of these you want to delegate your choice. The display also tells you something about each of those previous investors: their risk ratings and their quality ratings.
+If you reach the delegation screen, you will see a list of five investors who have previously played this game, together with their risk ratings and their quality ratings. You will choose to which of these you want to delegate your choice. 
+
 
 <br><br>
 
