--- a/_static/templates/Trivial_DecisionScreen.html
+++ b/_static/templates/Trivial_DecisionScreen.html
@@ -8,7 +8,9 @@
 <font size="4">
 {% if delegation == 1 %}
 <div style="float: center; text-align: center;">
-<b> Your willingness to pay was below the randomly drawn price. </b>
+<b> 
+        The cost of delegation this round is {{ player.trivial_price }} tokens, which is above your maximum of {{ player.trivial_wtp }} tokens.
+</b>
 </div>
 {% endif %}
 <br><br>
