adding treatment with list

--- a/_static/templates/WTP_DelegationInstructions_no_payment.html
+++ b/_static/templates/WTP_DelegationInstructions_no_payment.html
@@ -14,7 +14,10 @@ If you delegate to a previous investor, then the computer will automatically cho
 
 <br><br>
 
-If you choose not to delegate, then you will immediately proceed to the next round. If you want to delegate, you must specify the maximum price you are willing to pay for delegation. The computer has randomly drawn a price between 0 and 20. If that price turns out to be below your specified maximum willingness to pay, then you will pay that price and proceed to the delegation screen and pick the investor whose decision you will follow. Otherwise you will proceed to the screen where you make your own choice among the available options.
+If you choose not to delegate, then you will immediately proceed to the next round. 
+If you want to delegate, you must specify the maximum price you are willing to pay for delegation. 
+The computer has randomly drawn a price between 0 and 20. If that price turns out to be higher than your specified maximum willingness to pay, then you will pay nothing and proceed to the screen where you make your own choice among the available options. 
+If the randomly drawn price is lower than your specified maximum, then you will pay that lower price, proceed to the delegation screen, and pick the investor whose decision you will follow. 
 
 <br><br>
 
@@ -23,8 +26,9 @@ If you choose not to delegate, then you will immediately proceed to the next rou
 
 <br><br>
 
-If you reach the delegation screen, you will see a list of five investors who have previously played this game, together with their risk ratings and their quality ratings. You will choose to which of these you want to delegate your choice. 
-
+If you reach the delegation screen, you will see a list of five investors who have previously played this game, together with their risk ratings and their quality ratings. 
+You will choose to which of these you want to delegate your choice. 
+You will also be able to see the list of previous investors you would be able to delegate while deciding on the maximum price you are willing to pay for delegation.
 
 <br><br>
 
