--- a/_static/templates/Complex_DelegationWTP_with_list.html
+++ b/_static/templates/Complex_DelegationWTP_with_list.html
@@ -34,7 +34,7 @@
 
 </table>
 
-<b> If you decide to delegate you will be able to pick one of the following investors: </b>
+<b> If you delegate, you will be able to pick one of the following investors: </b>
 <table class="table">
     <tr>
         <td> <b> Investor </b> </td>
