--- a/_static/templates/Simple_DelegationWTP_with_list.html
+++ b/_static/templates/Simple_DelegationWTP_with_list.html
@@ -36,7 +36,7 @@
 
 <br>
 
-<b> If you decide to delegate you will be able to pick one of the following investors: </b>
+<b> If you delegate, you will be able to pick one of the following investors: </b>
 <table class="table">
     <tr>
         <td> <b> Investor </b> </td>
