high cost pilot

--- a/_static/templates/SimpleDelegationDecision.html
+++ b/_static/templates/SimpleDelegationDecision.html
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <td style="width:10%">
-            <input id="NoDelegation" type="radio" name="complex_delegation" value="-1" required>
+            <input id="NoDelegation" type="radio" name="simple_delegation" value="-1" required>
         </td>
         <td>
         I do not want to delegate my decision
@@ -46,7 +46,7 @@
     <tr>
 
         <td> 
-            <input id="1" type="radio" name="complex_delegation" value="{{e.3}}" required>
+            <input id="1" type="radio" name="simple_delegation" value="{{e.3}}" required>
         </td>
        <td>
             {{e.4}}
