--- a/_static/templates/SimpleDelegationDecision_no_quality.html
+++ b/_static/templates/SimpleDelegationDecision_no_quality.html
@@ -22,7 +22,7 @@
         <td style="width:10%">
         </td>
         <td>
-            To delegate, please select one of the investors below (costs 2 tokens = £0.1)
+            To delegate, please select one of the investors below (costs {{token_delegation_costs}} tokens = {{C.DELEGATION_COSTS}})
         </td>
     </tr>
     <tr>
