--- a/_static/templates/Complex_Delegation_SP.html
+++ b/_static/templates/Complex_Delegation_SP.html
@@ -19,16 +19,58 @@
         </td>
     </tr>
     <tr>
-        <td></td>
-        <td>I <b>do want to delegate</b> my decision at the price of  </td>
-    </tr>
-    <tr>
-        <td> 
+        <td>
             <input id="1" type="radio" name="complex_wtp" value="2" required>
         </td>
-        <td> 2 tokens </td>
+        <td>I <b>do want to delegate</b> my decision to one of the investors below (costs {{token_delegation_costs}} tokens = {{C.DELEGATION_COSTS}}) </td>
     </tr>
 </table>
+
+<table class="table">
+    <tr>
+        <td style="width:10%"> </td>
+        <td> <b> Investor </b> </td>
+        <td> <b> Quality Rating </b> </td>
+        <td> <b> Risk Rating </b> </td>
+        <td> <b> Earnings </b> </td>
+    </tr>
+    {% for e in experts %}
+    <tr>
+
+        <td> 
+            <input id="1" type="radio" value="{{e.3}}" disabled="true" >
+        </td>
+       <td>
+            {{e.4}}
+        </td>
+        <td>
+            {% if e.2 == 1 %}
+            <i> High </i>
+            {% endif %}
+            {% if e.2 == 0 %}
+            <i> Low </i>
+            {% endif %}
+        </td>
+        <td>
+            {% if e.1 == 1 %}
+            <i> Low </i>
+            {% endif %}
+
+            {% if e.1 == 2 %}
+            <i> Medium </i>
+            {% endif %}
+
+            {% if e.1 == 3 %}
+            <i> High </i>
+            {% endif %}
+        </td>
+        <td>
+            {{ e.0 }}
+        </td>
+    </tr>
+    {% endfor %}
+</table>
+
 
 <div id="NextButton" style="float: right;">
 {% next_button %}
