--- a/_static/templates/SP_TrivialDelegationDecision.html
+++ b/_static/templates/SP_TrivialDelegationDecision.html
@@ -6,13 +6,25 @@
 
 {{ block content }}
 <font size="4">
-<div style="float: center; text-align: center;">
-<b>
-    You chose to delegate your decision
-</b>
-</div>
-<br><br>
-<b> To delegate, please select one of the investors below: </b>
+
+<b> Please take the delegation decision: </b>
+<table class="table">
+    <tr>
+        <td style="width:10%">
+            <input id="NoDelegation" type="radio" name="trivial_wtp" value="0" disabled="true" required>
+        </td>
+        <td>
+        I <b>do not want to delegate</b> my decision
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <input id="1" type="radio" name="trivial_wtp" value="2" disabled ="true" checked="true" required>
+        </td>
+        <td>
+            I <b>do want to delegate</b> my decision to one of the investors below (costs {{token_delegation_costs}} tokens = {{C.DELEGATION_COSTS}}) 
+        </td>
+</table>
 
 <table class="table">
     <tr>
@@ -20,6 +32,7 @@
         <td> <b> Investor </b> </td>
         <td> <b> Quality Rating </b> </td>
         <td> <b> Risk Rating </b> </td>
+        <td> <b> Earnings </b> </td>
     </tr>
     {% for e in experts %}
     <tr>
@@ -50,6 +63,9 @@
             {% if e.1 == 3 %}
             <i> High </i>
             {% endif %}
+        </td>
+        <td>
+            {{ e.0 }}
         </td>
     </tr>
     {% endfor %}
