--- a/_static/templates/SalientPrice_DelegationInstructions.html
+++ b/_static/templates/SalientPrice_DelegationInstructions.html
@@ -9,25 +9,18 @@ Instructions: Delegation
 <div class="card bg-light">
     <div class="card-body">
 
-You can now choose to either delegate the task to a previous investor or else you can continue making your own choices as in the previous four rounds. 
-If you delegate to a previous investor, then the computer will automatically choose for you exactly the same asset as that investor chose in that round.
+You can now choose to either delegate the task to a previous investor or else you can continue making your own choices as in the previous four rounds. If you delegate to a previous investor, then the computer will automatically choose for you exactly the same asset as that investor chose in that round.
 
 <br><br>
 
-If you choose not to delegate, then you will immediately proceed to the next round. 
-If you want to delegate you will pay the cost of two tokens and proceed to the screen where you will choose one of the previous investors you can delegate your decisions to.
+As usual, your screen will display information you will need if you decide to make your own choices. It will also display a list of five investors who have previously played this game. The display also tells you something about each of those previous investors: the final payments they received, their risk ratings and their quality ratings.
 
 <br><br>
 
-<img src="{{ static 'pictures/SP_delegation.png' }}" class="center"/>
+<b>Their final payments</b>, like yours, come from the last round and one of the other four rounds in a single randomly chosen block. Please note that it is often from a different block (and round) than that for which you delegate.
 
-
-<br><br>
-
-If you reach the delegation screen, you will see a list of five investors who have previously played this game, together with their risk ratings and their quality ratings. 
-You will choose to which of these you want to delegate your choice. 
-
-<br><br>
+<br>
+<br>
 
 <b>Their risk rating</b> --- High, Medium, or Low --- is based on all their choices during their session. High risk rating means they often made choices that result in a very high payment in one state and a very low payment in the other state, while low risk rating indicates mostly choices that give a moderate payout no matter what the state turns out to be.
 
@@ -37,16 +30,33 @@ You will choose to which of these you want to delegate your choice.
 
 <b>Their quality rating</b> --- High or Low  --- indicates the “efficiency” of the investor's choices. A low rating indicates that they often could have obtained higher payments in both states if they had made different choices.  
 
-
-<br>
 <br>
 
-<img src="{{ static 'pictures/WTP_delegation_no_payment.png' }}" class="center"/>
+You would first be asked to decide whether to delegate the decision or not.
+The interface is as on the picture below.
+Upon choosing please confirm your decision by clicking the "Next" button.
+
+<br>
+
+
+<img src="{{ static 'pictures/delegation_twostage_1.png' }}" class="center"/>
  
-</div>
-</div>
-  
 <br>
+
+If you choose to delegate your decision you would need to pick the investor.
+The interface is as on the picture below.
+
+<br>
+
+<img src="{{ static 'pictures/delegation_twostage_1.png' }}" class="center"/>
+
+<br>
+
+If you decide not to delegate, you will be asked to to take the decision (as four previous ones) on your own.
+
+</div>
+</div>
+
 <br>
 
 <div style="float: center; text-align: center;">
