--- a/_static/templates/Complex_DelegationWTP.html
+++ b/_static/templates/Complex_DelegationWTP.html
@@ -8,19 +8,18 @@
 <font size="4">
 <br>
 
-<b> Please take the delegation decision: </b>
 <table class="table">
     <tr>
         <td style="width:10%">
             <input id="NoDelegation" type="radio" name="complex_wtp" value="0" required>
         </td>
         <td>
-        I <b>do not want to delegate</b> my decision
+        <b> I do not want to delegate</b> my decision
         </td>
     </tr>
     <tr>
         <td></td>
-        <td>I <b>do want to delegate</b> my decision if the cost of delegation does not exceed: </td>
+        <td><b> I do want to delegate</b> my decision if the cost of delegation does not exceed: </td>
     </tr>
     {% for c in costs %}
     <tr>
