--- a/_static/templates/SP_SimpleDelegationDecision.html
+++ b/_static/templates/SP_SimpleDelegationDecision.html
@@ -7,14 +7,13 @@
 {{ block content }}
 <font size="4">
 
-<b> Please take the delegation decision: </b>
 <table class="table">
     <tr>
         <td style="width:10%">
             <input type="radio" name="simple_wtp" value="0" disabled="true" >
         </td>
         <td>
-        I <b>do not want to delegate</b> my decision
+        <b>I do not want to delegate</b> my decision
         </td>
     </tr>
     <tr>
@@ -22,7 +21,7 @@
             <input type="radio" name="simple_wtp" value="2" disabled="true" checked="true" >
         </td>
         <td>
-         I <b>do want to delegate</b> my decision to one of the investors below (costs {{token_delegation_costs}} tokens = {{C.DELEGATION_COSTS}})  
+         <b>I want to delegate</b> my decision to one of the investors below (costs {{token_delegation_costs}} tokens = {{C.DELEGATION_COSTS}})  
         </td>
     </tr>
     
