--- a/_static/templates/SalientPrice_DelegationInstructions.html
+++ b/_static/templates/SalientPrice_DelegationInstructions.html
@@ -32,9 +32,9 @@ As usual, your screen will display information you will need if you decide to ma
 
 <br>
 
-You would first be asked to decide whether to delegate the decision or not.
+You will first be asked to decide whether to delegate the decision or not.
 The interface is as on the picture below.
-Upon choosing please confirm your decision by clicking the "Next" button.
+Upon choosing confirm your decision by clicking the "Next" button.
 
 <br>
 
@@ -43,8 +43,10 @@ Upon choosing please confirm your decision by clicking the "Next" button.
  
 <br>
 
-If you choose to delegate your decision you would need to pick the investor.
+If you chose not to delegate, you will be asked to to take the decision (similar to the four previous ones) on your own.
+If you chose to delegate your decision you will need to pick the investor.
 The interface is as on the picture below.
+Upon choosing confirm your decision by clicking the "Next" button.
 
 <br>
 
@@ -52,7 +54,6 @@ The interface is as on the picture below.
 
 <br>
 
-If you decide not to delegate, you will be asked to to take the decision (as four previous ones) on your own.
 
 </div>
 </div>
