--- a/_static/templates/SP_ComplexDelegationDecision.html
+++ b/_static/templates/SP_ComplexDelegationDecision.html
@@ -7,21 +7,20 @@
 {{ block content }}
 <font size="4">
 
-<b> Please take the delegation decision: </b>
 <table class="table">
     <tr>
         <td style="width:10%">
             <input id="NoDelegation" type="radio"  value="0" disabled = "true" required>
         </td>
         <td>
-        I <b>do not want to delegate</b> my decision
+        <b>I do not want to delegate</b> my decision
         </td>
     </tr>
     <tr>
         <td>
             <input id="1" type="radio" name="complex_wtp" value="2" disabled = "true" checked = "true" required>
         </td>
-        <td>I <b>do want to delegate</b> my decision to one of the investors below (costs {{token_delegation_costs}} tokens = {{C.DELEGATION_COSTS}}) </td>
+        <td> <b>I want to delegate</b> my decision to one of the investors below (costs {{token_delegation_costs}} tokens = {{C.DELEGATION_COSTS}}) </td>
     </tr>
 </table>
 
