--- a/_static/templates/SP_TrivialDelegationDecision.html
+++ b/_static/templates/SP_TrivialDelegationDecision.html
@@ -7,14 +7,13 @@
 {{ block content }}
 <font size="4">
 
-<b> Please take the delegation decision: </b>
 <table class="table">
     <tr>
         <td style="width:10%">
             <input id="NoDelegation" type="radio" name="trivial_wtp" value="0" disabled="true" required>
         </td>
         <td>
-        I <b>do not want to delegate</b> my decision
+        <b>I do not want to delegate</b> my decision
         </td>
     </tr>
     <tr>
@@ -22,7 +21,7 @@
             <input id="1" type="radio" name="trivial_wtp" value="2" disabled ="true" checked="true" required>
         </td>
         <td>
-            I <b>do want to delegate</b> my decision to one of the investors below (costs {{token_delegation_costs}} tokens = {{C.DELEGATION_COSTS}}) 
+             <b>I want to delegate</b> my decision to one of the investors below (costs {{token_delegation_costs}} tokens = {{C.DELEGATION_COSTS}}) 
         </td>
 </table>
 
