--- a/_static/templates/Trivial_DelegationWTP_SP.html
+++ b/_static/templates/Trivial_DelegationWTP_SP.html
@@ -8,14 +8,13 @@
 <font size="4">
 <br>
 
- <b> Please take the delegation decision: </b>
 <table class="table">
     <tr>
         <td style="width:10%">
             <input id="NoDelegation" type="radio" name="trivial_wtp" value="0" required>
         </td>
         <td>
-        I <b>do not want to delegate</b> my decision
+         <b>I do not want to delegate</b> my decision
         </td>
     </tr>
     <tr>
@@ -23,7 +22,7 @@
             <input id="1" type="radio" name="trivial_wtp" value="2" required>
         </td>
         <td>
-            I <b>do want to delegate</b> my decision to one of the investors below (costs {{token_delegation_costs}} tokens = {{C.DELEGATION_COSTS}}) 
+            <b>I want to delegate</b> my decision to one of the investors below (costs {{token_delegation_costs}} tokens = {{C.DELEGATION_COSTS}}) 
         </td>
 </table>
 
