--- a/_static/templates/Delegation_Results.html
+++ b/_static/templates/Delegation_Results.html
@@ -46,7 +46,7 @@
     </tr>
     <tr style="border-bottom:2pt solid black;">
         <td> Please click the link to complete the study </td>
-        <td> <b> <a href=completionlink>Complete</a> </b> </td>
+        <td> <b> <a href="https://app.prolific.co/submissions/complete?cc=6E1B1776">Complete</a> </b> </td>
         <td> </td>
         <td> </td>
         <td> </td>
